<resources>
    <string name="app_name">SignUp and Login With Firebase Authentication</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">todo</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_message_button">Send Message</string>

    <!--Menu Items-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Edit Profile</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_rate_and_review">Rate &amp; Review</string>
    <string name="menu_logout">Logout</string>

    <!--Validation message-->
    <string name="no_internet">No Internet Connection</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="error_user_registered">Error occurred user not register</string>
    <string name="user_registered">User registered successfully</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_check_your_email">Please check your email</string>
    <string name="please_enter_subject">Please enter subject</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_enter_date_of_birth">Please enter date of birth</string>
    <string name="please_verify_your_email">Please verify your email then you will able to login</string>
    <string name="check_dob">You must be 18 years or above in order to access the app</string>
    <string name="logout_quotes">Are you sure your wish to logout of the app?</string>
    <string name="contact_us_successfully">Your detail added successfully</string>
    <string name="profile_detail_update_successfully">Profile detail update successfully</string>
    <string name="logout_successfully">Logout successfully</string>

    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="update">Update</string>
    <string name="welcome_msg">Welcome to the App!</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="log_out">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Dummy Content-->
    <string name="your_app_name">Your App Name</string>
    <string name="lorem_ipsum_is_simply_dummy_text">Lorem Ipsum is simply dummy text</string>
    <string name="four_line_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in.</string>
    <string name="background">background</string>
    <string name="back">Back Pressed</string>
    <string name="john">John</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="this_is_home_fragment">This is Home Fragment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>