<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/plans"
            android:title="@string/menu_plans" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_rate_and_review"
            android:icon="@drawable/rate_and_review_icon"
            android:title="@string/menu_rate_and_review" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>