<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <ImageView
            android:id="@+id/cvBackground"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="-80dp"
            android:contentDescription="@string/background"
            android:rotation="340"
            android:src="@drawable/common_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30ssp"
            android:layout_height="@dimen/_30ssp"
            android:layout_marginStart="@dimen/_6ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:contentDescription="@string/back"
            android:padding="@dimen/_6ssp"
            android:src="@drawable/ic_back_icon"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingHorizontal="@dimen/_20ssp"
            android:paddingTop="@dimen/_36ssp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_26ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingHorizontal="@dimen/_24ssp"
            android:text="@string/lorem_ipsum_is_simply_dummy_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_26ssp"
            android:layout_marginTop="@dimen/_100ssp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@id/cvBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="text"
                android:maxLength="25"
                android:nextFocusDown="@id/etEmail"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_26ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/email_address"
            app:layout_constraintTop_toBottomOf="@id/tlName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:nextFocusDown="@id/etPassword"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_26ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/tlEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40ssp"
            android:layout_marginHorizontal="@dimen/_60ssp"
            android:layout_marginBottom="@dimen/_16ssp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing="0.18"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@id/tvLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tvLoginLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_19ssp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvLogin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4ssp"
            android:layout_marginBottom="@dimen/_18ssp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/log_in"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tvLoginLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_60ssp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_50ssp"
                android:layout_height="@dimen/_50ssp"
                android:indeterminateTint="@color/primaryColor"
                android:scaleType="centerInside"
                android:visibility="gone" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/progressBarHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:animateLayoutChanges="true"
            android:background="#A6EFEFEF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>